--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,9 +64,9 @@ dependencies {
 
     implementation 'com.squareup.picasso:picasso:2.71828'
 
-    implementation("androidx.room:room-ktx:2.5.0-alpha02")
-    implementation "androidx.room:room-runtime:2.5.0-alpha02"
-    kapt "androidx.room:room-compiler:2.5.0-alpha02"
+    implementation "androidx.room:room-ktx:$room_version"
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
 
     implementation "androidx.work:work-runtime-ktx:2.7.1"
 
