--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,8 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
     implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
 
+    implementation "com.jakewharton.timber:timber:5.0.1"
+
     implementation "androidx.recyclerview:recyclerview:1.2.1"
 
     implementation 'com.squareup.picasso:picasso:2.71828'
