--- a/build.gradle
+++ b/build.gradle
@@ -3,17 +3,17 @@ ext {
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.7.10'
-    ext.room_version = '2.4.3'
+    ext.kotlin_version = '1.9.0'
+    ext.room_version = '2.5.2'
     repositories {
         google()
         mavenCentral()
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.2.0'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.5.1"
+        classpath 'com.android.tools.build:gradle:7.4.2'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.10"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.7.2"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
